--- a/config.yaml
+++ b/config.yaml
@@ -24,15 +24,18 @@ menu:
     - name: "Services"
       url: "/services/"
       weight: 1
+    - name: "Case Studies"
+      url: "/case-studies/"
+      weight: 2
     - name: "Publications"
       url: "/publications/"
-      weight: 2
+      weight: 3
     - name: "Contact"
       url: "/contact/"
-      weight: 3
+      weight: 4
     - name: "Login"
       url: "https://witjes.dk/login"
-      weight: 4
+      weight: 5
 
 outputs:
   home: ["HTML", "RSS"]
